linted, formatted, and new layout

--- a/index.html
+++ b/index.html
@@ -11,19 +11,29 @@
     <!--Bulma Framework | Font Awesome-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
-    
+
     <!--Google Fonts-->
     <style> @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@323&family=Merienda&family=Otomanopee+One&display=swap'); </style>
 </head>
 <body>
 
-    <div class="container app-wrap">
+    <div class="section">
+      <h1>Weathr Wizrd</h1>
+
+      <div class="video-container">
+          <div class="color-overlay" style="opacity: 0.5;"></div>
+          <video autoplay loop muted>
+              <source src="assets/mp4's/mountain.mp4" type="video/mp4">
+          </video>
+      </div>
+
+      <div class="container app-wrap">
 
         <!--SEARCH BOX-->
         <div class="columns is-mobile is-centered" style="padding-top: 100px;">
             <div class="column is-half">
                 <div class="control has-icons-left">
-                    <input id="where" class="input search-box is-rounded" type="text" placeholder="Search for a city" autocomplete="off">
+                    <input id="citytextbox" class="input search-box is-rounded" type="text" placeholder="Search for a city" autocomplete="off">
                     <span class="icon is-small is-left">
                         <i class="fas fa-map-marked-alt"></i>
                     </span>
@@ -35,7 +45,7 @@
         <div class="columns is-mobile is-centered">
             <div class="column has-text-centered">
                 <section class="location">
-                    <div class="city">Location</div>
+                    <div class="city">Location <span>&#128205;</span> </div>
                     <div class="date">date</div>
                 </section>
             </div>
@@ -76,7 +86,7 @@
 
 
         <!--SECOND ROW-->
-        <div class="columns is-mobile is-centered">
+        <div class="columns is-mobile is-centered" style="padding-bottom:100px;">
             <div class="column has-text-centered">
                 <nav class="level">
 
@@ -107,6 +117,13 @@
             </div>
         </div>
     </div>
+    </div>
+
+    <footer class="footer" style="height: 75vh;">
+      <div class="content has-text-centered" style="padding-top:110px;">
+        <p style="font-size:20px ;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">made by with &#10084;&#65039; by <a href="http://devarshi-ap.github.io/" target="_blank" style="color:white;">Devarshi Patel</a></p>
+      </div>
+    </footer>
     
     <script src="main.js"></script>
 </body>
