fix mp4 src path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>Weather Wizard</title>
 
     <link rel="stylesheet" href="main.css">
 
@@ -19,7 +19,7 @@
     <section class="showcase">
 
         <div class="video-container">
-            <video src="assets/mp4/mountain.mp4" autoplay muted loop id="videoEl"></video>
+            <video src="assets\mp4\mountain.mp4" autoplay muted loop id="videoEl"></video>
         </div>
         <div class="content">
             <div style="position: absolute; top:-30px; right:0; margin:40px;">
